# sesame

./: .gitignore  LICENSE  Makefile.am  README  configure.ac  portability.patch  readme-to-tests  regex_match.c  sesame.c  sha2.h  update.sh  yubikey.c  yubikey.h
m4/: strict_warnings.m4
test/: base.sh  env.sh  format.sh  passphrases.sh  passwordfile  readme.sh  util.sh  v1.passwordfile
